--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,57 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.happytumiteam.surveypkbl">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Home">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+               <action android:name="android.intent.action.MAIN" />
+             <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
+
+
+
         </activity>
+        <activity android:name=".FormData" />
+        <activity android:name=".DataMitra" />
+        <activity android:name=".Info" />
+        <activity android:name=".Searchable" />
+        <activity android:name=".Setting" />
+        <activity android:name=".Splashscreen" />
+
+        <activity android:name=".AmbilLokasi"/>
+            <!--<intent-filter>-->
+                <!--<action android:name="com.happytumiteam.surveypkbl.MapDemoActivity" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--</intent-filter>-->
+            <!--<intent-filter>-->
+                <!--<action android:name="com.happytumiteam.surveypkbl" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--</intent-filter>-->
+
+        <activity
+            android:name="com.happytumiteam.surveypkbl.MapDemoActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="YOUR_API_KEY" />
+
+        <activity android:name=".AmbilGambar"></activity>
+
     </application>
 
 </manifest>
